# Raspberry-AirController

./: .clang-tidy  .gitignore  .hgignore  CMakeLists.txt  StartScript.sh
doc/: UpstartInstructions.txt  example.json  forcast_example.json  humidity.ods  rcLocalScript  sampleOpenWeatherApiCall.txt
src/: .clang-format  Am2302Sensor.cpp  Am2302Sensor.hpp  Constants.cpp  Constants.hpp  Enabler.cpp  Enabler.hpp  Gpio.cpp  Gpio.hpp  GpioCollector.hpp  GpioConstants.hpp  GpioManager.cpp  GpioManager.hpp  GpioSim.cpp  GpioSim.hpp  Humidity.cpp  Humidity.hpp  IGpio.hpp  MyMqtt.cpp  MyMqtt.hpp  NightAir.cpp  NightAir.hpp  RotiController.cpp  RotiController.hpp  SensorSim.hpp  SysLogger.cpp  SysLogger.hpp  TempController.cpp  TempController.hpp  Temperature.cpp  Temperature.hpp  Threading.cpp  Threading.hpp  TimeTrigger.cpp  TimeTrigger.hpp  WeatherStation.cpp  WeatherStation.hpp  common_dht_read.cpp  main.cpp  pi_2_dht_read.cpp  (+2 more)
src/Controller/: ControllerIdGenerator.cpp  ControllerIdGenerator.hpp  HumLimitController.cpp  HumLimitController.hpp  NightAir.cpp  NightAir.hpp  OneTimeTrigger.cpp  OneTimeTrigger.hpp  RotiController.cpp  RotiController.hpp  SensorController.cpp  SensorController.hpp  TempController.cpp  TempController.hpp  TimeTrigger.cpp  TimeTrigger.hpp
src/Gpio/: Gpio.cpp  Gpio.hpp  GpioCollector.cpp  GpioCollector.hpp  GpioConstants.hpp  GpioOr.cpp  GpioOr.hpp  GpioSim.cpp  GpioSim.hpp  IGpio.hpp
src/Http/: HttpServer.cpp  HttpServer.hpp
src/Sensor/: Am2302Sensor.cpp  Am2302Sensor.hpp  ISensor.hpp  SensorSim.cpp  SensorSim.hpp  WeatherStation.cpp  WeatherStation.hpp  common_dht_read.cpp  common_dht_read.hpp  pi_2_dht_read.cpp  pi_2_dht_read.hpp  pi_2_mmio.cpp  pi_2_mmio.hpp
src/Utility/: Constants.cpp  Constants.hpp
tests/: TcpClient.cpp
